<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gebruiker.tictactoe.view.MainActivity"
    android:background="@color/primary"
    android:orientation="vertical">

    <TextView
        android:text="@string/app_title"
        android:textSize="50dp"
        android:textColor="@color/icons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:gravity="center_horizontal|center"
        android:padding="20dp"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1.0"
        android:gravity="center_horizontal|center"
        android:clipChildren="false"
        tools:ignore="DisableBaselineAlignment">

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight=".6"
            tools:ignore="InefficientWeight,UselessParent"
            android:clipChildren="false">

            <Button
                android:id="@+id/buttonStartGame"
                android:text="@string/startgame"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@color/accent"
                android:layout_weight=".5"
                tools:ignore="NestedWeights"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginStart="60dp" />

            <Button
                android:id="@+id/buttonHighscores"
                android:text="@string/highscores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/accent"
                android:layout_marginBottom="15dp"
                android:layout_weight=".5"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp" />

            <Button
                android:id="@+id/buttonAboutUs"
                android:text="@string/aboutus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/accent"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp" />

            <Button
                android:id="@+id/closeApplication"
                android:text="@string/exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/accent"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
